--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "concurrently \"pnpm dev:next\" \"pnpm dev:server\"",
     "dev:next": "next dev",
     "dev:server": "tsx src/app/server/index.ts",
-    "build": "next build",
+    "build": "next build && pnpm build:server",
+    "build:server": "tsc -p tsconfig.server.json",
     "start": "next start",
+    "start:server": "node dist/app/server/index.js",
     "lint": "eslint --fix",
     "typecheck": "tsc --noEmit --incremental false",
-    "format": "prettier -w '**/*.{js,ts,tsx,json,css,md}'",
-    "format:check": "prettier -c '**/*.{js,ts,tsx,json,css,md}'",
+    "format": "prettier --write .",
+    "format:check": "prettier --check '**/*.{js,ts,tsx,json,css,md}'",
     "test": "vitest run",
     "test:watch": "vitest"
   },
@@ -20,6 +22,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@heroui/alert": "^2.2.21",
     "@heroui/badge": "^2.2.12",
     "@heroui/button": "2.2.19",
     "@heroui/card": "^2.2.18",
@@ -38,14 +41,16 @@
     "@heroui/switch": "2.2.17",
     "@heroui/system": "2.4.15",
     "@heroui/theme": "2.4.15",
+    "@heroui/toast": "^2.0.11",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
     "@sentry/nextjs": "^9.27.0",
+    "@sentry/node": "^7.92.0",
     "clsx": "2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
     "mysql2": "^3.14.1",
