--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,8 +45,8 @@ jobs:
   deploy:
     name: 🚀 Deploy to Google Cloud Run
     env:
-      ENV_NAME: ${{ github.ref_name == 'main' && 'production' || 'dev' }}
-      SUFFIX: ${{ github.ref_name == 'main' && '' || '-dev' }}
+      ENV_NAME: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && 'production' || 'dev' }}
+      SUFFIX: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && '' || '-dev' }}
     needs: [code-checks, test]
     if: success()
     runs-on: ubuntu-latest
