--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,6 +41,9 @@ jobs:
 
   deploy:
     name: 🚀 Deploy to Google Cloud Run
+    env:
+      ENV_NAME: ${{ github.ref_name == 'main' && 'production' || 'dev' }}
+      SUFFIX: ${{ github.ref_name == 'main' && '' || '-dev' }}
     needs: [code-checks, test]
     if: success()
     runs-on: ubuntu-latest
@@ -82,6 +85,9 @@ jobs:
         run: gcloud auth configure-docker
 
       # --- Backend ---
+      - name: 🔧 Build Backend
+        run: pnpm exec tsc -p tsconfig.server.json
+
       - name: 🎯 Upload sourcemaps to Sentry (Backend)
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
